# pasifika-poa-chain

./: .gitignore  Cargo.toml  README.md  quick-test.sh  run-node.sh  test-rpc.sh
.github/workflows/: pasifika-ci.yml
docs/: BUILD_AND_RUN.md  COMPLETION_REPORT.md  CONFIG.md  IMPLEMENTATION.md  INDEX.md  NON_FINANCIAL_BLOCKCHAIN.md  QUICKSTART.md  README.md  README_DOCS.md  SETUP_SUMMARY.md  TESTING_IN_PROGRESS.md  TESTING_STATUS.md  TEST_GUIDE.md  TEST_RESULTS_FINAL.md
pasifika-poa/: .gitignore  Cargo.toml  Dockerfile  LICENSE  docker-compose.yml  genesis.json
pasifika-poa/examples/: deploy-contract.js  package.json  send-transaction.js
pasifika-poa/scripts/: clean-data.sh  start-node1.sh  start-node2.sh  start-node3.sh  test-network.sh
pasifika-poa/src/: consensus.rs  genesis.rs  main.rs  p2p.rs
scripts/: get-ip.sh  quick-test.sh  run-node.sh  start-node1.sh  start-node2.sh  start-node3.sh  test-rpc.sh
whitepaper/: pasifika-chain-whitepaper.md
