[package]
name = "pasifika-poa"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace]

[dependencies]
reth-node-ethereum = { path = "../crates/ethereum/node" }
reth-node-builder = { path = "../crates/node/builder" }
reth-primitives = { path = "../crates/primitives" }
reth-chainspec = { path = "../crates/chainspec" }
reth-network = { path = "../crates/net/network" }
reth-network-api = { path = "../crates/net/network-api" }
reth-consensus = { path = "../crates/consensus/consensus" }
reth-primitives-traits = { path = "../crates/primitives-traits" }
reth-tasks = { path = "../crates/tasks" }

futures-util = "0.3"
eyre = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

alloy-genesis = { version = "1.0", default-features = false }
alloy-primitives = { version = "1.0", default-features = false }
alloy-consensus = { version = "1.0", default-features = false }
alloy-rlp = { version = "0.3", default-features = false }
alloy-chains = "1.0"

clap = { version = "4", features = ["derive"] }
